@@ -164,3 +164,12 @@ v11:
 * Changed "simpleType" to be of type "anyOf an enum". In other words, other
   strings not in the list are allowed, so that there can exist manufacturer-
   specific types.
+
+v12:
+* Added a "displayName" everywhere there's a "name".
+* Fixed the DEVICE_INFO.json example: moved "No footprint" to
+  "dmx_start_address" from "dmx_footprint".
+* Fixed spelling mistake in PRODUCT_DETAIL_ID_LIST.json.
+* Updated the description in "simpleType" to reference "Table A-15: Data Type
+  Defines" in the RDM spec.
+* Added labels to "status_type" in STATUS_MESSAGES.json.
